erDiagram
    AgentTypology ||--o{ AgentSession : "used in"
    AgentTypology ||--o{ AgentTestResult : "tested with"
    AgentSession ||--o{ ChatMessage : "logs"
    AgentSession }o--|| GameSession : "linked to"

    AgentTypology {
        Guid Id PK
        string Name UK
        string Description
        string BasePrompt
        string DefaultStrategy
        string Status
        Guid CreatedBy FK
        Guid ApprovedBy FK
        DateTime CreatedAt
        DateTime ApprovedAt
        JSON PhaseModels
    }

    AgentSession {
        Guid Id PK
        Guid AgentId FK
        Guid GameSessionId FK
        Guid UserId FK
        Guid GameId FK
        Guid TypologyId FK
        JSON Config
        JSON CurrentGameState
        DateTime StartedAt
        DateTime EndedAt
        bool IsActive
    }

    AgentTestResult {
        Guid Id PK
        Guid TypologyId FK
        string TestQuery
        bool Success
        string Response
        double ConfidenceScore
        string ErrorMessage
        DateTime TestedAt
        Guid TestedBy FK
    }

    GameSession {
        Guid Id PK
        string Status
    }

    ChatMessage {
        Guid Id PK
        string Content
        string Role
        DateTime CreatedAt
    }
